--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -55,9 +55,16 @@ jobs:
     - name: Docker Setup Buildx
       uses: docker/setup-buildx-action@v3
 
-    - name: Build and push image Aliyun
+     # - name: Build and push image Aliyun
+     #  run: |
+     #  docker login -u $ALIYUN_REGISTRY_USER -p $ALIYUN_REGISTRY_PASSWORD $ALIYUN_REGISTRY
+    - name: Build and push image to Aliyun
       run: |
-        docker login -u $ALIYUN_REGISTRY_USER -p $ALIYUN_REGISTRY_PASSWORD $ALIYUN_REGISTRY
+        echo "$ALIYUN_REGISTRY_PASSWORD" | docker login -u "$ALIYUN_REGISTRY_USER" --password-stdin "$ALIYUN_REGISTRY"
+        docker build -t "$ALIYUN_REGISTRY_IMAGE" .
+        docker push "$ALIYUN_REGISTRY_IMAGE"
+
+  
         # 数据预处理,判断镜像是否重名
         declare -A duplicate_images
         declare -A temp_map
